[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Lobby_Screen.PNG" type="Texture" id=1]
[ext_resource path="res://Fonts/LobbyFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Screens/Multiplayer/Lobby.gd" type="Script" id=3]
[ext_resource path="res://Presets/Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/LevelSelect/Rectangle_Play_Button.PNG" type="Texture" id=5]
[ext_resource path="res://Presets/HoverButton.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="LobbyScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Transition" parent="." instance=ExtResource( 4 )]

[node name="LobbyScreen" type="Sprite" parent="."]
position = Vector2( 963, 545 )
texture = ExtResource( 1 )

[node name="PlayerList" type="VFlowContainer" parent="."]
margin_left = 987.0
margin_top = 607.0
margin_right = 1769.0
margin_bottom = 907.0

[node name="LobbyCode" type="Button" parent="."]
margin_left = 883.0
margin_top = 348.0
margin_right = 1250.0
margin_bottom = 453.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "00000000"

[node name="StartGame" type="TextureButton" parent="."]
margin_left = 1223.0
margin_top = 914.0
margin_right = 1569.0
margin_bottom = 1082.0
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 6 )

[connection signal="pressed" from="LobbyCode" to="." method="_on_LobbyCode_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_Start_Button_pressed"]
